--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 :root {
+  background-color: rgb(236, 246, 246);
    --textcolor: #fff;
    --bgcolor0: #021c1e;
    --bgcolor1: #004445;
@@ -16,11 +17,34 @@
  }
 
  h1 {
-   background-color: var(--bgcolor1);
+   color:#021c1e
+ }
+
+ h2{
+  position: relative;
+  left: 28%;
  }
  
-
+img{
+  position: relative;
+  top: -10px;
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+}
  
+a {
+  color:rgb(9, 9, 9);
+}
  
-
- 
+.card {
+  width: 80%; 
+  height:240px;
+  max-height: 240px;
+  /* border-style:solid;
+  border-width: 1px; */
+  padding: 20px;
+  margin: 20px;
+  flex: 0 0 350px;
+  /* box-shadow: 5px 10px 10px #888888; */
+}
