--- a/style.css
+++ b/style.css
@@ -1,49 +1,47 @@
-:root {
-  background-color: rgb(248, 249, 249);
-
- }
-
- body {
-    background-image: url("https://www.freewpheaders.com/wp-content/gallery/lights/colorful-blurred-lights-website-header.jpg");
-    height: 150px;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    max-width: 100%;
-    max-height: 100%;
-   
- 
- }
- 
- header {
-   display: flex;
-   justify-content:space-between;
-   align-items: center;
-   padding: 1%;
-   background-color: var(--bgcolor1);
-   color:var(--textcolor);
- }
-
- h1{
-  position: relative;
-  left: 28%;
-  font-size: 30px;
- }
-
- p {
-  font-size: 45px;
- }
- 
-img{
-  position: relative;
-  top: -10px;
-  height: 300px;
-  width: 300px;
-  border-radius: 50%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
- 
-a {
-  color:rgb(9, 9, 9);
+
+header {
+  background-size: cover;
+  background-color: #04b4c1;
+  display: flex;
+  padding: 15px;
+  justify-content: space-between;
+  text-shadow: black;
+  color: #068984;
 }
- 
+
+h1 {
+  font-size: 40px;
+  color: #024e76;
+  font-style: oblique;
+}
+
+nav {
+  margin: 5px;
+  font-size: 1.55vw;
+}
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style:none; 
+}
+
+header nav ul li a {
+  padding: 10px 15px;
+  font-weight: lighter;
+  font-size: 1.55vw;
+  font-style: oblique;
+  color: #024e76;
+}
+
+ li a:hover {
+  color: rgb(222, 216, 119);
+}  
+
+
