--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -7,7 +7,7 @@
 }
 
 .background{
-    background-image: url('../images/nature.jpeg');
+    background-image: url('images/nature.jpeg');
     background-size: cover;   
     border-style: solid;  
     border-color: rgb(8, 210, 129);
