--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -156,7 +156,7 @@ h3 {
 
 /* Main/Side Projects Styling */
 .surf {
-    background-image: url("images/surf.jpeg");
+    background-image: url(images/surf.jpeg);
     background-size: cover;
     width: 100%;
     height: 600px;
