--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ h3 {
 
 /* Main/Side Projects Styling */
 .surf {
-    background-image: url('images/surf.jpeg');
+    background-image: url('Images/surf.jpeg');
     background-size: cover;
     width: 100%;
     height: 600px;
@@ -167,7 +167,7 @@ h3 {
 }
 
 .LED {
-    background-image: url("images/Led.webp");
+    background-image: url("Images/Led.webp");
     background-size: cover;
     width: 45%;
     height: 300px;
@@ -178,7 +178,7 @@ h3 {
 }
 
 .calculator {
-    background-image: url("images/cal.jpeg");
+    background-image: url("Images/cal.jpeg");
     background-size: cover;
     width: 45%;
     height: 300px;
@@ -191,7 +191,7 @@ h3 {
 }
 
 .pastel-puzzles {
-    background-image: url("images/puzzle.jpeg");
+    background-image: url("Images/puzzle.jpeg");
     background-size: cover;
     width: 45%;
     height: 300px;
@@ -204,7 +204,7 @@ h3 {
 }
 
 .run-buddy {
-    background-image: url("images/run.avif");
+    background-image: url("Images/run.avif");
     background-size: cover;
     width: 45%;
     height: 300px;
